applications/flask/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app
  namespace: default
  labels:
    app.kubernetes.io/name: flask-app
    app.kubernetes.io/component: backend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: flask-app
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
